--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
+    "vercel": "^35.1.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
     "vuetify": "^3.6.13"
